# headless-cline

./: .gitignore  Cargo.toml  Makefile  bacon.toml
.cursor/rules/: default-rule.mdc
.github/workflows/: ci.yml  test.yml
crates/cline-core/: Cargo.toml
crates/cline-core/src/: cline.rs  lib.rs
crates/cline-core/src/mentions/: content.rs  mod.rs  types.rs
crates/cline-core/src/prompts/: mod.rs  responses.rs  system.rs
crates/cline-core/src/prompts/sections/: capabilities.rs  custom_instructions.rs  mcp_servers.rs  mod.rs  modes.rs  objective.rs  rules.rs  system_info.rs  tool_use.rs  tool_use_guidelines.rs
crates/cline-core/src/prompts/tools/: access_mcp_resource.rs  ask_followup_question.rs  attempt_completion.rs  browser_action.rs  execute_command.rs  insert_content.rs  list_code_definition_names.rs  list_files.rs  mod.rs  new_task.rs  read_file.rs  search_and_replace.rs  search_files.rs  switch_mode.rs  types.rs  use_mcp_tool.rs  write_to_file.rs
crates/cline-core/src/services/: browser.rs  diagnostics.rs  git.rs  mod.rs
crates/cline-core/src/services/ai/: mod.rs
crates/cline-core/src/services/anthropic/: mod.rs
crates/cline-core/src/services/diff/: mod.rs  types.rs
crates/cline-core/src/services/diff/strategies/: mod.rs  search_replace.rs  unified.rs
crates/cline-core/src/services/diff/strategies/new_unified/: edit_strategies.rs  mod.rs  search_strategies.rs  types.rs
crates/cline-core/src/services/mcp/: hub.rs  mod.rs  types.rs
crates/cline-core/src/services/terminal/: mod.rs
crates/cline-core/src/shared/: message.rs  mod.rs  modes.rs
crates/cline-core/tests/: mentions.rs
crates/cline-wasm/: Cargo.toml
crates/cline-wasm/src/: lib.rs
docs/: cline-core.txt  cline-ts.txt  cline.txt
extension/: package.json  tsconfig.json  webpack.config.js
extension/src/: extension.ts
src/: cline.rs  lib.rs
