[package]
name = "cline-core"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { workspace = true }
reqwest = { workspace = true }
anyhow = { workspace = true }
futures-util = { workspace = true }
tracing = { workspace = true }
serde_json = { workspace = true }
async-trait = { workspace = true }
tokio = { version = "1.36.0", features = ["fs", "io-util", "process", "sync", "rt", "macros"] }
dirs = "5.0.1"
once_cell = "1.19.0"
diffy = "0.4.0"
strsim = "0.11.0"
regex = "1.10.3"
tempfile = "3.10.0"
notify = "6.1.1"
uuid = { version = "1.12.0", features = ["v4"] }
chrono = { workspace = true }
lazy_static = "1.4.0"
headless_chrome = "1.0.9"
html2md = "0.2.14"

[dev-dependencies]
mockall = "0.13"
pretty_assertions = "1.4"
git2 = "0.18.2"